update user image

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <!-- ADD USER LEVEL HERE -->
                 <img
                   class="w-8 h-8 rounded-full mr-4"
-                  src="images/rook.jpg"
+                  src="images/user-image.jpg"
                   alt="User Level"
                 />
                 <span class="hidden md:inline-block text-gray-100"
