update about us

--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
       <h3 class="font-bold font-bold text-gray-100">About</h3>
       <p class="py-4 text-gray-600 text-sm">
         Guru is an online collaboration app, designed to allow users to organise and easily keep track of their projects. <br> 
-        Improve your Guru rating by helping others answer queries!
+        Climb the Guru ranks and earn points by helping others answer queries!
       </p>
     <!-- </div> -->
   </div>
