--- a/dashboard/kaban.html
+++ b/dashboard/kaban.html
@@ -77,7 +77,7 @@
                     </div>
                     <div class="w-full md:w-full flex items-start md:w-full px-3">
                       <button type="submit " class="rounded-full bg-green-600 text-gray-300 focus:outline-none hover:text-gray-100 py-1 p-4 mr-1 ">Add</button>
-                      <button type='button' class="rounded-full bg-green-600 text-gray-300 focus:outline-none hover:text-gray-100 py-1 p-4 mr-1 cancelBtn">Cancel</button>
+                      <button type='button' class="rounded-full bg-green-600 text-gray-300 focus:outline-none hover:text-gray-100 py-1 p-4 mr-1 cancelBtn" id="cancel-create">Cancel</button>
                     </div>
                   </div>
               </form>
