--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -39,20 +39,20 @@
     <div class="max-w-2xl mx-auto" >
       <div class="create-project">
         <button id="create-project">+ Create project</button>
-        <form class="w-full max-w-xl rounded-lg add-card hidden">
+        <form id="create-projec-form" class="w-full max-w-xl rounded-lg add-card hidden">
           <div class="flex flex-wrap -mx-3 mb-6">
               <div class="w-full md:w-full px-3 mb-2 mt-2">
                 <label for="name">Project name:</label>
-                <input class=" rounded border border-gray-400 w-full py-2 px-3 font-medium placeholder-gray-700 focus:outline-none " name="name"  required></input>
+                <input id="project_name" class=" rounded border border-gray-400 w-full py-2 px-3 font-medium placeholder-gray-700 focus:outline-none " name="name"  required></input>
               </div>
               <div class="w-full md:w-full flex items-start md:w-full px-3">
                 <div class="w-full md:w-full px-3 mb-2 mt-2">
                   <label for="start">Start date:</label>
-                  <input type="date" min="2018-01-01" class=" rounded border border-gray-400  py-2 px-3 font-medium placeholder-gray-700 focus:outline-none " name="start"  required></input>
+                  <input type="date" min="2018-01-01" class=" rounded border border-gray-400  py-2 px-3 font-medium placeholder-gray-700 focus:outline-none " name="start" id="start_date" required></input>
                 </div>
                 <div class="w-full md:w-full px-3 mb-2 mt-2">
                   <label for="start">End date:</label>
-                  <input type="date" min="2018-01-01" class=" rounded border border-gray-400  py-2 px-3 font-medium placeholder-gray-700 focus:outline-none " name="start"  required></input>
+                  <input type="date" min="2018-01-01" class=" rounded border border-gray-400  py-2 px-3 font-medium placeholder-gray-700 focus:outline-none " name="start" id="end_date" required></input>
                 </div>
               </div>
               <div class="w-full md:w-full px-3 mb-2 mt-2">
@@ -62,6 +62,7 @@
                     <option value="team 1"></option>
                     <option value="team 2"></option>
                   </datalist>
+                <ul></ul>
               </div>
               <div class="w-full md:w-full flex items-start md:w-full px-3">
                 <button type="submit " class="rounded-full bg-green-600 text-gray-300 focus:outline-none hover:text-gray-100 py-1 p-4 mr-1 ">Create</button>
@@ -82,7 +83,7 @@
 
         <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
 
-            <table class="w-full text-sm text-left text-gray-400">
+            <table class="w-full text-sm text-left text-gray-400 table">
               <thead class="text-xs uppercase bg-gray-700 dark:text-gray-400">
                 <tr>
                   <th scope="col" class="p-4">
@@ -154,7 +155,7 @@
                   <button type="button" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Kanban</button>
                 </td>
                 <td class="px-6 py-4 text-right">
-                  <button type="button" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit</button>
+                  <button type="button" class="font-medium text-blue-600 dark:text-blue-500 hover:underline editBtn">Edit</button>
                 </td>
               </tr>
               </tbody>
@@ -185,7 +186,7 @@
                   </div>
                   <div class="w-full md:w-full flex items-start md:w-full px-3">
                     <button type="submit " class="rounded-full bg-green-600 text-gray-300 focus:outline-none hover:text-gray-100 py-1 p-4 mr-1 ">Update</button>
-                    <button type='button' class="rounded-full bg-green-600 text-gray-300 focus:outline-none hover:text-gray-100 py-1 p-4 mr-1 cancelBtn">Cancel</button>
+                    <button type='button' class="rounded-full bg-green-600 text-gray-300 focus:outline-none hover:text-gray-100 py-1 p-4 mr-1 cancelEditBtn">Cancel</button>
                   </div>
                 </div>
             </form>
